[tool.poetry]
name = "studio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["all"], version = "^0.3.0"}
pydantic = ">=2.7,<3.0"
langchain-core = "0.3.19"
langchain-openai = "0.2.8"
langgraph = "0.2.50"
langgraph-checkpoint = "2.0.4"
langgraph-sdk = "0.1.36"
python-decouple = "^3.8"
pinecone-client = "5.0.1"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
